manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-project-deployment
  labels:
    app: argocd-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: argocd-project
  template:
    metadata:
      labels:
        app: argocd-project
    spec:
      containers:
      - name: argocd-project
        image: danushvithiyarth/argocdproject:v18
        ports:
        - containerPort: 80
