manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-project-service
spec:
  type: ClusterIP
  selector:
    app: argocd-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
